# sqrcp

./: Cargo.toml  docs  make-docs.sh
docs/: crypto.js  crypto.wasm  main.js
sqrcp-client/: .gitignore  Cargo.toml  build.sh
sqrcp-client/src/: lib.rs  main.rs  utils.rs
sqrcp-client/www/: main.js  receiver.html.tera  sqrcp_client_expose.js  sqrcp_client_expose.js.tera
sqrcp-server/: Cargo.toml
sqrcp-server/src/: main.rs  receiver.html.tera
src/: decrypt.js  main.rs  receiver.html.tera
