[package]
name = "sqrcp"
version = "0.1.0"
authors = ["Lily Chung <lkdc@mit.edu>"]
edition = "2018"

[dependencies]
base64 = "0.12.1"
chrono = "0.4.11"
clap = "2.33.1"
itertools = "0.9.0"
multipart = { version = "0.16.1", features = ["client"], default-features = false }
qrcodegen = "1.6.0"
regex = "1.3.7"
ring = "0.16.13"
tera = { version = "1.3.0", default-features = false }
thiserror = "1.0.15"
ureq = { version = "1.1.1", features = ["json"] }
