[package]
name = "sqrcp"
version = "0.1.0"
authors = ["Lily Chung <lkdc@mit.edu>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
clap = "2.33.3"
hyper = { version = "0.14.12", features = ["full"] }
itertools = "0.10.1"
multipart = { version = "0.18.0", features = ["client", "hyper"], default-features = false }
qrcodegen = "=1.6.0"
regex = "1.5.4"
ring = "0.16.20"
tera = { version = "1.12.1", default-features = false }
tokio = "1.11.0"
thiserror = "1.0.29"
