[package]
name = "sqrcp-client"
version = "0.1.0"
authors = ["Lily Chung <lkdc@mit.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.13.0"
ring = "0.16.20"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
thiserror = "1.0.29"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
